# serializer version: 1
# name: test_bigfile_capped_emit[aqua_FreeSize_GSU9]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x128_MI16x16xvtWHoYxc71Y04A8ZSjYlUvMwEEU9ZcD9lP_aESBd1jE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x32_MI16x16x145jNosOmqRGcXfyBUSTZt6k_0qOYvFvJfPXRIr3PYWg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x64_MI16x16x1uwJbJcB1swChAcXN68ALi86K3ozyXJ4_BhUuD-GTCKc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x128_MI16x16xa9048EtaN3cRpwv84oHMplVmvwnQ9ecj1BoyEjvO_iQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x32_MI16x16x1Atg0SJc_0Jj9sN62PF50PUo8re7GTDTQ69O3M4EiE2s=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x64_MI16x16x11MC7HjjfLbOGzch9Fb5VFI1IUMLA2v3Ajzyz_pznzxU=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[equality_gfx950_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1JTBRLSwrJD7BclqHVZ_i0trL6fYwj1zUJZz52IEFROU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT201MX9STAM710wXzUdouJWDYM0uH9ue-VKxbf5U363FI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2KO_zKKwuYmiqCfVz-pSkrMeG875nmerwn2H-aHgIjF8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2LZoTKGg8mofUCf1_spXAZOOWalLHMqGTicIjoWPinhY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2PJnvjzEX2VeerAy0krbTH8tooNP8WgrvilIExVC3mY8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2R54J7VtdooTxAFInYjErjaIs0eW2ZZieJWhvpbY3JIU=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[freesize_gfx942_F8NH_GSU]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1-Gq3viMEd5pHmT-hRQUlb78KmWoIK3xp-FwfbgdWlSw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT192r7iArjW7KFlH4k5IzW9a_-rY0CgN-05OXeWSFVVGE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1OE_KlMv2XFKEHM551vIMjB7imsNQQvyj34jNGUpkiJc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1au0ZO3Y7y9w4M2li9aflh2D6wjPhPaAST9goHMCFGHE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1d7lLXHjrz3r3Sgg-5sQ6tORXMnFGbaXeCPTxoGRs3rs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1jiqp10TEK7ubCw4IMRHIcSiTRw-2w9GKNLWi4ymf4OI=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1201_I8II]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT128x1pm70pFNAIbz57LsEXMA5x3EdBRePnGBr4L-pMxbU7g0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64IxapNnYkhkAlFJtTakTv7qvH7rYT274WgduX3wuOO1c=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64LZae3ifoPZ_NTEVxtPcmX2UE7iHKsTu1Bxd4DZqRLaE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x12p-_mjWkL5nJjsSfe6g3duX-4d_34O71qHTTO3-Jz4s=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x13uqt3GrmqwiGK8O-UIuYBDGOuXz-h5JcQNyvdC61LtA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x165W7SWsMJS52UMe9ahOmTnDsO0Ek7bmHLhHfld4100w=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1250_GG]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2AnIxIyJju72v9-kNRJjMOAcwQCaEpquhbZ1u7_K6avE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2G3ijc9R0DSW5_WFshdOqd_s6fDcLtSeNIgfjyAJ7ROo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3ZAkS9vx2nyNh9ZUJG3FCTg5ekyaKu9XHPp8R1XxiOOE=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx90a_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32GrFe6B7s5iZlqeVvC1hq0MhSnahZRLoG9AEECz5LJPg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32UuW74hrQzE6feZmyjNZ4yOlMBOqM5gDEr25HuqZRDkM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32ywY7qdvAp8cHxmHYncYGzqcQ1EQOLnwnuSC-lu6U-c0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x192x64_MI326fL_wNdkFtoWhNTv7q4kqViMGmWyOUA2RnwCkLGvKoA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xa2wVuJv0NWqC97MYnB2x0z37VZrohtahclprfNClRYw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xfF9rlyxpA7NRuaqafa8aAOVUmETJH4AUGD9Dlzwejks=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx950_origami_MX]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT18FPtoICzOZnFVeSf8A3pm0p59RJkXm7yWpjf4kAieJU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT18nf3l5_8AOEhXZt_w9IN1f-VXoNz6EVgEr9PH27BVV4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1E6KJuJ0WkrNRy7IAN943t-osct9oDwjxTHJyTw34XWg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1FVyqGEbB5eZaEoP07qSigj-jPYEgVA7zoxRob0Y-k8o=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1GQ5CigMIlDY-qXedeCaL3Cr7lTxJ4hpEZMzeG9hd-cc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1JDXFTi5Qe2n_-V4KMQ0n3Qh033Npb1IVkRk4ZTIoznU=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[navi31_HSS]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1bNNYHbSc2wmchslO375LZRnL_pZT1DFxGIPGicLVdvI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1tkKBiVDJijr5zMhlerOT8lndvDmIOMmgQpKCWCNDVMc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT36mkiI7S0qQQ0MM8cTVkuaQDab-CL1on4f2p0RT4zTY4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3OY1EzaGX8BpNIqsoH1sIdn_79EFRVhbb3CdivCEMY8c=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4B3-fWW20-a8gJREC5cL3FtmcZe8r3K5NeJ0_jH1kz88=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4XelTW-q6Ym2-ShabPGUXA_xyA51HOZMBfMq_7Nasmik=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_Ailk]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16CBzFpM_tWcd8c6lkgAwrq8f4WLwNF0BJwkQ_tRzCRnA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16SmsJM0SAdMrotNBs8_yVK1Yidx48Vqf7IxMC5HChhy0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16yh-i1m_xJhQM6UmwejpUSWXFSwaydSCfE61j-YR8rUI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16I6BNCE68z2cErFc4-UreGGYrZn2YYli8Hp43aO8QNF0=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_S]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16q8G4TglEVLOIzMGUA6Zaf-RlwTR1wHxIb9DmNrqwSUg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16ZfiFyDjiIJeKDt9IJFhwi6fvyVEz8bKyLearHPWhWcA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16-HJRuzFOjpHoH2UvKG4HU0-s-uswioaTkixWUeQO60M=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16BF_CHUYVL51o1ZGdQk_Wq8BrTOc94bRnuhv0yD0b5fE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x16_MI16x169JygY4s7JNRbCfUfxqF-sYkVFJZKDgb3qIcXdxmYh8E=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x32_MI16x16Ipv8-DVmzKdNvs9rcCDpdMiGKP2pcyaDLRG1quWUW68=',
      'err': 0,
    }),
  ])
# ---
